fix background gap between projects and ideas

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,7 +3,6 @@ html, body {
   height: 100%;
   width: 100%;
   overflow: auto;
-  position: fixed;
 }
 /* padded section */
 .pad-section {
@@ -100,7 +99,6 @@ html, body {
 #projects {
   background-color: #306d9f;
   color: #ffffff;
-  height: 100vh;
 }
 #projects .glyphicon {
   border: 2px solid #FFFFFF;
